--- a/wallet.html
+++ b/wallet.html
@@ -94,7 +94,7 @@
           <h3 data-translate-key="view_address_title">👁️ View Address</h3>
           <p data-translate-key="view_address_description">Manually enter wallet address to view assets.</p>
           <div class="manual-input">
-            <input type="text" id="manualAddressInput" placeholder="erd1..." />
+            <input type="text" id="manualAddressInput" placeholder="erd1qqqqqqqqqqqqqpgqq0yx7w5lguw5e5067j2lpl96t5vp3xcu27rswu3eq4" />
             <button id="manualAddressBtn" class="button-connect-wallet" data-translate-key="check_address_button">Check Address</button>
           </div>
           <div class="status-container" data-status-for="manual"></div>
